syntax = "proto3";

package com.seed.p2p.v1alpha;

import "google/protobuf/timestamp.proto";

option go_package = "seed/backend/genproto/p2p/v1alpha;p2p";

// Seed P2P API.
service P2P {
  // ListBlobs returns a stream of blobs that the peer has.
  // It's assumed that all peers have a way to list their blobs in a monotonic order,
  // i.e. blobs that a peer receives later will have a higher index/cursor.
  // This allows peers to sync more efficiently by remembering the cursor from the previous request,
  // and only asking for what's new since then in the next request.
  // Clients must treat the cursor as an opaque string.
  rpc ListBlobs(ListBlobsRequest) returns (stream Blob);

  rpc ListPeers(ListPeersRequest) returns (ListPeersResponse);

  // Request a peer to issue a lightning BOLT-11 invoice
  rpc RequestInvoice(RequestInvoiceRequest) returns (RequestInvoiceResponse);
}

// Request to list blobs.
message ListBlobsRequest {
  // Optional. A cursor obtained from a previous request to resume the stream.
  string cursor = 1;
}

// Request to list te peer list.
message ListPeersRequest {
  // Optional. Maximum number of peers to return.
  int32 page_size = 1;

  // Optional. Page token to continue listing peers from.
  string page_token = 2;
}

// Request Invoice request.
message RequestInvoiceRequest {
  // The invoice amount in satoshis
  int64 amount_sats = 1;

  // Required. The account we request this invoice from
  string account = 2;

  // Optional requested memo to be attached in the invoice
  string memo = 3;

  // True to request a hold invoice instead of a regular one. If true, then preimage_hash should be filled
  bool hold_invoice = 4;

  // Preimage hash of the requested hold invoice. If hold_invoice is set to false this field is skipped
  bytes preimage_hash = 5;
}

// Request invoice response
message RequestInvoiceResponse {
  // Text encoded BOLT-11 Invoice
  string pay_req = 1;
}

// Response to list peers.
message ListPeersResponse {
  // Peer information
  repeated PeerInfo peers = 1;

  // Token to continue listing peers from.
  string next_page_token = 2;
}

message Blob {
  // CID of the blob.
  bytes cid = 1;

  // Cursor can be used to resume the stream to get only newer blobs than this one.
  // Clients must not expect that all blobs will have a cursor (might be done as an optimization),
  // but whenever they see a cursor for a blob they have already processed, they should remember it for future requests.
  string cursor = 2;
}

// Various details about a known peer.
message PeerInfo {
  // Libp2p peer ID.
  string id = 1;

  // List of known multiaddrs of the peer.
  repeated string addrs = 2;

  // Connection status of our node with a remote peer.
  ConnectionStatus connection_status = 3;

  // When wthe peer updated its addresses for the last time.
  google.protobuf.Timestamp updated_at = 4;
}

// Indicates connection status of our node with a remote peer.
// Mimics libp2p connectedness.
enum ConnectionStatus {
  // NotConnected means no connection to peer, and no extra information (default).
  NOT_CONNECTED = 0;

  // Connected means has an open, live connection to peer.
  CONNECTED = 1;

  // CanConnect means recently connected to peer, terminated gracefully.
  CAN_CONNECT = 2;

  // CannotConnect means recently attempted connecting but failed to connect.
  // (should signal "made effort, failed").
  CANNOT_CONNECT = 3;

  // Limited means we have a transient connection to the peer, but aren't fully connected.
	LIMITED = 4;
}